--- a/templates/main.html
+++ b/templates/main.html
@@ -26,8 +26,17 @@
   </script> {% block body %}
   <style>
     table {
-      width : 100%;
+      width: 100%;
       font-size: 12px;
+    }
+
+    .container {
+      width: 95%;
+    }
+
+    footer {
+      font-size: 10px;
+      font-style: italic;
     }
   </style>
 
@@ -44,45 +53,46 @@
   </div>
   </div>
   -->
-      <div class="container">
-       <div class="row">
-          <table class="table table-sm table-bordered responsive-table highlight" >
-            <thead>
-              <tr>
-                <th scope="col">NF</th>
-                <th scope="col">Série</th>
-                <th scope="col">Data Emissão</th>
-                <th scope="col">Operação</th>
-                <th scope="col">Razão Social</th>
-                <th scope="col">CNPJ/CPF</th>
-                <th scope="col">Total R$</th>
-                <th scope="col">Chave</th>
-                <th scope="col" style="display:none;">XML</th>
-                <th scope="col">Ação</th>
-              </tr>
-            </thead>
-            <tbody id="myTableBody">
-              <!-- arquivos -->
-              {% for arquivo in arquivos %}
-              <tr>
-                <td>{{ arquivo.NF }}</td>
-                <td>{{ arquivo.serie }}</td>
-                <td>{{ arquivo.data_emissao }}</td>
-                <td>{{ arquivo.operacao }}</td>
-                <td>{{ arquivo.razao_social }}</td>
-                <td>{{ arquivo.cnpj_cpf }}</td>
-                <td>{{ arquivo.total }}</td>
-                <td>{{ arquivo.chave }}</td>
-                <td style="display:none;">{{ arquivo.xml_file }}</td>
-                <td> <a href="#!" class="brand-logo"><i class="material-icons">pageview</i>Visualizar</a> </td>
-              </tr>
-              {% endfor %}
-              <!-- fim arquivos -->
+  <div class="container">
+    <div class="row">
+      <table class="table table-sm table-bordered responsive-table highlight">
+        <thead>
+          <tr>
+            <th scope="col">NF</th>
+            <th scope="col">Série</th>
+            <th scope="col">Data Emissão</th>
+            <th scope="col">Operação</th>
+            <th scope="col">Razão Social</th>
+            <th scope="col">CNPJ/CPF</th>
+            <th scope="col">Total R$</th>
+            <th scope="col">Chave</th>
+            <th scope="col" style="display:none;">XML</th>
+            <th scope="col">Ação</th>
+          </tr>
+        </thead>
+        <tbody id="myTableBody">
+          <!-- arquivos -->
+          {% for arquivo in arquivos %}
+          <tr>
+            <td>{{ arquivo.NF }}</td>
+            <td>{{ arquivo.serie }}</td>
+            <td>{{ arquivo.data_emissao }}</td>
+            <td>{{ arquivo.operacao }}</td>
+            <td>{{ arquivo.razao_social }}</td>
+            <td>{{ arquivo.cnpj_cpf }}</td>
+            <td>{{ arquivo.total }}</td>
+            <td>{{ arquivo.chave }}</td>
+            <td style="display:none;">{{ arquivo.xml_file }}</td>
+            <td> <a href="danfeview/{{ arquivo.xml_file }}" target="_blank" class="brand-logo"><i
+                  class="material-icons">pageview</i>Visualizar</a> </td>
+          </tr>
+          {% endfor %}
+          <!-- fim arquivos -->
 
-            </tbody>
-          </table>
-        </div>
-        </div>
+        </tbody>
+      </table>
+    </div>
+  </div>
 
   <blockquote>
     <footer>Direitos reservados - Ricardo Tondello - 2019</footer>
