Ajusta leitura xml para destinatario

--- a/templates/main.html
+++ b/templates/main.html
@@ -85,7 +85,9 @@
 
   <nav>
     <div class="nav-wrapper">
-      <a href="#!" class="brand-logo"><i class="material-icons">desktop_mac</i>PyDanfeView</a>
+      <a href="#!" title="PyDanfeView Versão 0.0.2" class="brand-logo"><i class="material-icons">desktop_mac</i>PyDanfeView</a>
+
+
     </div>
   </nav>
 
