--- a/templates/main.html
+++ b/templates/main.html
@@ -102,6 +102,7 @@
       <table id="myTable" class="table table-sm table-bordered centered responsive-table highlight">
         <thead>
           <tr class="header">
+            <th scope="col">Tipo</th>
             <th scope="col">NF</th>
             <th scope="col">Série</th>
             <th scope="col">Data Emissão</th>
@@ -117,6 +118,7 @@
           <!-- arquivos -->
           {% for arquivo in arquivos %}
           <tr>
+            <td>{{ arquivo.tpNF }}</td>
             <td>{{ arquivo.NF }}</td>
             <td>{{ arquivo.serie }}</td>
             <td>{{ arquivo.data_emissao }}</td>
